# nmm-rust

./: .prtrc.json  CLAUDE.md  Cargo.toml  architecture.md  prt.json
.github/workflows/: ci.yml  release.yml
crates/nmm-core/: Cargo.toml
crates/nmm-core/src/: error.rs  game_mode.rs  install_log.rs  lib.rs  mod_format.rs  mod_info.rs
crates/nmm-install-log/: Cargo.toml
crates/nmm-install-log/src/: error.rs  lib.rs  schema.rs
crates/nmm-install-log/tests/: schema_tests.rs
docs/: core_trait_definitions.md  cross-platform_considerations.md  future_enhancements.md  implementation_phases.md  performance_considerations.md  plan.md  project_structure.md  recommended_crate_ecosystem.md  security_considerations.md  testing_strategy.md
tests/integration/: Cargo.toml
tests/integration/fixtures/: mod_info_sample.json
tests/integration/src/: core_tests.rs  lib.rs
