[workspace]
resolver = "2"
members = [
    "crates/nmm-core",
    "tests/integration",
#    "crates/nmm-vfs",
#    "crates/nmm-install-log",
#    "crates/nmm-archive",
#    "crates/nmm-scripting",
#    "crates/nmm-plugin-manager",
#    "crates/nmm-game-modes",
#    "crates/nmm-games",
#    "crates/nmm-nexus-api",
#    "crates/nmm-profiles",
#    "crates/nmm-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/nexus-mod-manager-rs"
rust-version = "1.75"

[workspace.dependencies]
# Core
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.89"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.100"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
quick-xml = { version = "0.39.0", features = ["serialize"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Database
rusqlite = { version = "0.38.0", features = ["bundled"] }

# Archives
zip = "7.2.0"
sevenz-rust = "0.6.1"

# File system
walkdir = "2.5.0"
tempfile = "3.24.0"
pathdiff = "0.2.3"

# CLI
clap = { version = "4.5.56", features = ["derive"] }

# HTTP
reqwest = { version = "0.13.1", features = ["json"] }
url = { version = "2.5.8", features = ["serde"] }

# Utilities
chrono = { version = "0.4.43", features = ["serde"] }
semver = { version = "1.0.27", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
unicase = "2.9.0"

# Testing (used via crate dev-dependencies)
assert_fs = "1.1.3"
predicates = "3.1.3"
mockall = "0.14.0"
proptest = "1.9.0"

# Platform-specific
[workspace.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_Foundation",
]

[profile.release]
lto = true
codegen-units = 1
strip = true
