[package]
name = "nmm-core"
description = "Core domain types and traits for Nexus Mod Manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true }
chrono = { workspace = true }
semver = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
serde_json.workspace = true
