[package]
name = "nmm-install-log"
description = "SQLite-backed installation log for Nexus Mod Manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rusqlite.workspace = true
thiserror.workspace = true
